-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.1
-
None
-
Ubuntu 22.04
Windows 10
-
-
c89bef9dcd (qt-creator/qt-creator/9.0) c89bef9dcd (qt-creator/qt-creator/master)
- Have a compile error in your code
- Press Ctrl+B to build
- The Issues pane opens
- Press ESC to close the pane
- Press Backspace to clear an unwanted character
- The Issues pane opens again
- relates to
-
QTCREATORBUG-27702 Switch to issues tab on first error
-
- Closed
-