src/plugins/projectexplorer/buildmanager.cpp
@@ -486,7 +486,7 @@ void BuildManager::updateTaskCount()
 {
     const int errors = getErrorTaskCount();
     ProgressManager::setApplicationLabel(errors > 0 ? QString::number(errors) : QString());
-    if (errors > 0 && !d->m_poppedUpTaskWindow) {
+    if (isBuilding() && errors > 0 && !d->m_poppedUpTaskWindow) {
         showTaskWindow();
         d->m_poppedUpTaskWindow = true;
     }
